Resolvendo conflitos de classes e ajustando os componentes do layout para se adaptarem ao dark mode

--- a/public/css/custom_adm.css
+++ b/public/css/custom_adm.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 * {
     margin: 0;
@@ -10,11 +8,9 @@
 }
 
 .navbar {
-    color: var(--main-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--fourth-bg-color);
     position: sticky;
     box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.12);
     padding: 5px 15px;
@@ -159,7 +155,6 @@
     /*width: 250px;*/
     position: sticky;
     top: 60px;
-    background-color: var(--main-bg-color);
     box-shadow: 0 1px 4ps 1px rgba(0, 0, 0, 0.12);
     overflow-y: auto;
     overflow-x: hidden;
@@ -192,20 +187,6 @@
     font-size: 16px;
 }
 
-.sidebar a {
-    color: var(--main-color);
-}
-
-.sidebar a:hover {
-    background-color: var(--second-bg-color);
-    color: var(--active-color);
-}
-
-.sidebar .sidebar-nav.active {
-    background-color: var(--second-bg-color);
-    color: var(--active-color);
-}
-
 .sidebar .sidebar-nav.active::before {
     content: "";
     position: absolute;
@@ -213,7 +194,6 @@
     top: 0;
     height: 100%;
     width: 5px;
-    background-color: var(--site-color);
 }
 
 .sidebar-nav .icon {
@@ -236,16 +216,10 @@
     cursor: pointer;
     display: flex;
     width: 100%;
-    color: var(--main-color);
 }
 
 .sidebar .dropdown-btn span{
     margin-right: 5px;
-}
-
-.sidebar .dropdown-btn:hover{
-    background-color: var(--second-bg-color);
-    color: var(--active-color);
 }
 
 .dropdown-btn .icon{
